# api-client-python

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTION_README.md  Dockerfile  FlatFilesExport.md  LICENSE  MANIFEST.in  Makefile  README.md  README_DEV.md  SCHEMA_BUILD.md  build_hook.py  default.nix  flake.nix  get_utc_update_time.py  link_client_to_interpreter.bat  mypy.ini  openapi.yaml  publish.bat  pydoc-markdown.yml  pyproject.toml  replace_version_in_setup_py.py  requirements.txt  setup.py  setup_template.py  update_version.sh
coinmetrics/: __init__.py  _catalogs.py  _client_types.py  _data_collection.py  _exceptions.py  _models.py  _schema_constants.py  _typing.py  _utils.py  api_client.py  build.py  constants.py  data_collection.py  data_exporter.py  schema_resolver.py  typer_cli.py
docs/: mkdocs.yml
docs/docs/: CHANGELOG.md  FlatFilesExport.md  api_client.md  index.md
docs/processors/: pydoc_markdown_processors.py
docs/site/: 404.html  CHANGELOG.html  FlatFilesExport.html  api_client.html  index.html  search.html  sitemap.xml
docs/source/: conf.py  index.rst
examples/: README.md  bbb_metrics_csv_exporter_using_plain_requests.py  bbb_metrics_json_exporter_using_plain_requests.py  books_json_exporter.py  eod_metrics_csv_exporter.py  funding_rates_json_exporter.py  generate_examples.py  trades_csv_exporter.py  trades_csv_exporter_from_selected_exchanges_all_btc_usd_pairs.py  trades_json_exporter.py
examples/asset_metrics/: asset_pair_metrics_json_exporter.py  bbb_metrics_csv_exporter_using_plain_requests.py  bbb_metrics_json_exporter.py  eod_metrics_csv_exporter.py  filtered_reference_rates_by_market_cap.py  institution_metrics_json_exporter.py  metrics_exporter_json.py  raference_rates_json_exporter.py  reference_rates_json_exporter.py
examples/atlas/: accounts.csv  accounts.txt  get_atlas_balance_updates_sample.py
examples/exchange_asset_metrics/: metrics_json_exporter.py
examples/exchange_metrics/: exchange_metrics_json_exporter.py  metrics_json_exporter.py
examples/files_download/: export_all_market_candles_daily.py  export_binance_daily_binance_btcpairs_market_quotes_spot.py  export_market_quotes_futures.py  export_market_trades_spot_data.py  trades_files_exporter.py
examples/futures_data/: market_contract_price_json_exporter.py  market_funding_rates.py  market_greeks_json_exporter.py  market_liquidations_json_exporter.py  market_open_interest_json_exporter.py
examples/market_data/: books_json_exporter.py  candles_json_exporter.py  funding_rates_json_exporter.py  index_candles_json_exporter.py  indexes_json_exporter.py  market_metrics_json_exporter.py  options_implied_vol_json_exporter.py  orderbooks_flattened_csv_exporter.py  pair_candles_json_exporter.py  quotes_json_exporter.py  trades_csv_exporter.py  trades_json_exporter.py
examples/notebooks/: Option-Chain-Example.ipynb  sample_api_v4.ipynb  walkthrough_community.ipynb  walkthrough_community_python_event.ipynb
examples/parallel_data_export/: btc_1m_metrics_export.py  candles_csv_export.py  candles_csv_export_manual.py  candles_json_export.py  market_orderbooks_csv_export.py  market_orderbooks_csv_exporter_by_day.py  market_trades_list.py
examples/troubleshooting/: ssl_certs_specified.py
examples/websockets/: timeseries_stream_asset_metrics.py  timeseries_stream_index_levels.py  timeseries_stream_market_candles.py  timeseries_stream_market_orderbooks.py  timeseries_stream_market_quotes.py  timeseries_stream_market_trades.py
test/: debug.py  performance_benchmark.py  test_api_client.py  test_api_methods.py  test_as_list.py  test_blockchain_methods.py  test_catalog.py  test_catalog_benchmarks.py  test_catalogs_v2.py  test_constituent_methods.py  test_custom_exceptions.py  test_data_exporter.py  test_debugging.py  test_models.py  test_parallel_datacollections.py  test_rate_limits.py  test_refd_methods.py  test_securirty_master_methods.py  test_security_master_methods.py  test_speed_benchmarks.py  test_to_dataframe.py  test_to_list.py  test_websocket_methods.py
test/data/: catalog_asset_pair_candles.csv  catalog_asset_pairs.csv  catalog_assets_markets.csv  catalog_assets_metrics.csv  catalog_indexes.csv  (+9 more)
(+201 files in other folders)
