[tool.poetry]
name = "coinmetrics-api-client"
version = "2025.9.2.14"
description = "Python client for Coin Metrics API v4."
authors = ["Coin Metrics <info@coinmetrics.io>", "Oleksandr Buchkovskyi <oleksandr@coinmetrics.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://coinmetrics.github.io/api-client-python/site/index.html"
repository = "https://github.com/coinmetrics/api-client-python"
packages = [{include = "coinmetrics"}]
include = ["test", "openapi.yaml"]
keywords = ["coin metrics", "coin", "metrics", "crypto", "bitcoin", "network-data", "market-data", "api", "handy"]
documentation = "https://coinmetrics.github.io/api-client-python/site/index.html"

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.24.0"
orjson = "^3.6.0"
numpy = "^2.0.0"
pandas = "^2.0.0"
polars = "^1.0.0"
websocket-client = "^1.6.0"
python-dateutil = "^2.8.2"
typer = ">=0.7.0"
tqdm = "^4.64.1"
PyYAML = "^6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
flake8 = "^3.8.3"
black = "^23.1"
mkdocs = "^1.3.1"
mkdocs-material = "^9.1.3"
pydoc-markdown = "^4.8"

pytest-mock = "^3.2.0"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.6.1"

types-python-dateutil = "*"
types-requests = "*"
types-setuptools = "*"
types-ujson = "*"

[tool.poetry.scripts]
coinmetrics = 'coinmetrics.typer_cli:main'
cm-build-schema = 'coinmetrics.build:main'

[build-system]
requires = ["poetry-core>=1.0.0", "PyYAML"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
